syntax = "proto3";

package serialization;

option java_multiple_files = true;
option java_package = "com.jacle.serialization";
option java_outer_classname = "SingleStreamProto";

message HelloRequestSingleStream {
    //rpc的方法的参数
    string name = 1;
}

message HelloReplySingleStream {
    //rpc返回的数据
    string message = 1;
}

//rpc处理类
service GreeterSingleStream
{
    //参数是stream形式
    //一个请求，多个响应
    rpc sayHello(HelloRequestSingleStream) returns ( stream HelloReplySingleStream) {}
}
